vlib/v/checker/tests/multiple_fn_attributes.vv
[inline;deprecated]
fn foo(name string) string {}